quickstart/config-sync/ingress-gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: helloafzal3
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
spec:
  rules:
  - http:
      paths:
      - path: /smartfac/(.*)
        pathType: Prefix
        backend:
          service:
            name: hubapi
            port:
              number: 80
