quickstart/config-sync/ingress-gateway/ingress2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: helloafzal3
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: hubapi
      port:
        number: 80
